# hail_runtime

./: .gitignore  CMakeLists.txt  README.md
include/hail/common/: config.h
include/hail/loader/: wasm_loader.h
include/hail/module/: module.h
include/hail/runtime/: runtime.h
include/hail/sys/api/: native_api.h
include/hail/sys/wascall/: wascall.h
include/hail/utils/: io.h  stub.h
src/: main.c
src/loader/: CMakeLists.txt  wasm_loader.c
src/module/: CMakeLists.txt  module.c
src/runtime/: CMakeLists.txt  runtime.c
src/sys/api/: CMakeLists.txt  native_api.c
src/sys/wascall/: CMakeLists.txt  default_calls.c  wascall_table.c
src/utils/: CMakeLists.txt  io.c
tests/: add.wasm  module_test.c  wascall_test.c
